# csapex_dataset

./: .gitlab-ci.yml  CMakeLists.txt  package.xml  plugins.xml
res/sand/: annotation.example.yaml  dataset_index.example.yaml
src/biwi/: evaluation.cpp  evaluation.hpp  reproject.hpp  rgbd_id_importer.cpp  rgbd_id_importer.hpp
src/people/: dataset_common.hpp  dataset_exporter.cpp  dataset_exporter.hpp  dataset_importer.cpp  dataset_importer.hpp  dataset_importer_legacy.cpp  dataset_importer_legacy.hpp  dataset_stats.cpp  dataset_stats.hpp
src/people_2D/: import_INRIA_data.cpp  import_INRIA_data.hpp  import_inria.hpp
src/people_3D/: dataset_common.cpp  dataset_common.hpp  dataset_exporter.cpp  dataset_exporter.hpp  dataset_importer.cpp  dataset_importer.hpp  dataset_importer_legacy.cpp  dataset_importer_legacy.hpp  dataset_stats.cpp  dataset_stats.hpp  matching_roi_evaluator.cpp  matching_roi_evaluator.hpp  roi_exporter.cpp  roi_exporter.hpp  roi_importer.cpp  roi_importer.hpp  roi_label_filter.cpp  roi_label_filter.hpp  roi_passthrough.cpp  roi_passthrough.hpp
src/people_visual/: import_INRIA_data.cpp  import_INRIA_data.hpp  import_inria.hpp
src/sand/: dataset.cpp  dataset.hpp  entry.cpp  entry.hpp  exporter_slim.cpp  exporter_slim.hpp  importer.cpp  importer.hpp
src/sand/common/: annotation.cpp  annotation.hpp  dataset.cpp  dataset.hpp  entry.cpp  entry.hpp
tools/: CMakeLists.txt
tools/labeling_tool/: CMakeLists.txt  package.xml
tools/labeling_tool/cmake/: enforce-cpp11.cmake
tools/labeling_tool/src/: main.cpp
tools/labeling_tool/src/converter/: converter.hpp
tools/labeling_tool/src/gui/: main_window.cpp  main_window.h  main_window.ui  qt_app.cpp  qt_app.hpp
tools/labeling_tool/src/gui/widget/: image_display.cpp  image_display.hpp
tools/labeling_tool/src/wrapper/: dataset.cpp  dataset.hpp  entry.cpp  entry.hpp
