<?xml version="1.0"?>
<package>
  <name>csapex_dataset</name>
  <version>0.0.1</version>
  <description>The csapex_dataset enables the possibility to load different datasets.</description>

  <maintainer email="philipp.kuhlmann@student.uni-tuebingen.de">Philipp Kuhlmann</maintainer>
  <maintainer email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>

  <author email="philipp.kuhlmann@student.uni-tuebingen.de">Philipp Kuhlmann</author>
  <author email="richard.hanten@uni-tuebingen.de">Richard Hanten</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>csapex</build_depend>
  <build_depend>csapex_core_plugins</build_depend>
  <build_depend>csapex_opencv</build_depend>
  <build_depend>csapex_point_cloud</build_depend>
  <build_depend>csapex_evaluation</build_depend>

  <run_depend>csapex</run_depend>
  <run_depend>csapex_core_plugins</run_depend>
  <run_depend>csapex_opencv</run_depend>
  <run_depend>csapex_point_cloud</run_depend>
  <run_depend>csapex_evaluation</run_depend>


  <export>
    <csapex plugin="${prefix}/plugins.xml" />
  </export>
</package>
