<?xml version="1.0"?>
<package>
  <name>labeling_tool</name>
  <version>0.0.0</version>
  <description>
    Tool for labeling different datasets
  </description>

  <maintainer email="philipp.kuhlmann@student.uni-tuebingen.de">Philipp Kuhlmann</maintainer>
  <author email="philipp.kuhlmann@student.uni-tuebingen.de">Philipp Kuhlmann</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
